--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,3 +16,10 @@ spring:
   sql:
     init:
       mode: always
+
+application:
+  mail:
+    host: "smtp.gmail.com"
+    port: 587
+    username: "devzouftou@gmail.com"
+    password: ${APPLICATION_MAIL:xxxxxx}
