--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,5 +21,9 @@ application:
   mail:
     host: "smtp.gmail.com"
     port: 587
-    username: "devzouftou@gmail.com"
-    password: ${APPLICATION_MAIL:xxxxxx}
+    username: ${blog.application.username}
+    password: ${blog.application.password}
+    systemName: ${blog.application.systemName}
+    systemEmail: ${blog.application.systemEmail}
+    adminName: ${blog.application.adminName}
+    adminEmail: ${blog.application.adminEmail}
